--- a/app/src/main/res/layout/real_main_admin.xml
+++ b/app/src/main/res/layout/real_main_admin.xml
@@ -41,10 +41,13 @@
             android:layout_marginTop="90dp"
             android:id="@+id/tmp_1"
             android:layout_width="match_parent"
-            android:layout_height="180dp">
+            android:layout_height="180dp"
+            >
 
             <RelativeLayout
-                android:layout_width="206dp"
+                android:layout_weight="1"
+                android:id="@+id/tmp_3"
+                android:layout_width="180dp"
                 android:layout_height="match_parent">
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -58,7 +61,7 @@
                     android:gravity="top|center"
                     android:textColor="@color/black"
                     android:backgroundTint="@null"
-                    android:textSize="40dp"
+                    android:textSize="37dp"
                     />
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_marginTop="20dp"
@@ -74,15 +77,15 @@
                     android:textSize="40dp"  />
 
                 <Button
-                    android:layout_marginTop="20dp"
                     android:id="@+id/announce_speak_button"
                     android:layout_width="match_parent"
                     android:layout_height="77dp"
+                    android:layout_marginTop="20dp"
                     android:background="#00ff0000"
                     android:fontFamily="@font/font2"
                     android:text="공지녹음"
                     android:textColor="@color/black"
-                    android:textSize="40dp"
+                    android:textSize="37dp"
                     android:visibility="invisible" />
 
                 <Button
@@ -94,85 +97,97 @@
                     android:fontFamily="@font/font2"
                     android:text="공지쓰기"
                     android:textColor="@color/black"
-                    android:textSize="40dp"
+                    android:textSize="37dp"
                     android:visibility="invisible" />
             </RelativeLayout>
             <RelativeLayout
+                android:layout_weight="1"
+                android:layout_toRightOf="@id/tmp_3"
                 android:layout_marginTop="20dp"
-                android:layout_width="200dp"
+                android:layout_width="180dp"
                 android:layout_height="165dp"
                 >
+
                 <androidx.appcompat.widget.AppCompatButton
-                    android:background="@drawable/mainmenu_button_2"
+                    android:layout_marginLeft="10dp"
                     android:id="@+id/ge_button"
-                    android:layout_width="185dp"
+                    android:layout_width="195dp"
                     android:layout_height="155dp"
+                    android:layout_marginRight="25dp"
+                    android:background="@drawable/mainmenu_button_2"
                     android:fontFamily="@font/font2"
                     android:text=" 게시판 "
                     android:textColor="@color/black"
-                    android:textSize="40dp"
-                    />
+                    android:textSize="37dp" />
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:id="@+id/ge_button_hide"
-                    android:layout_marginLeft="3dp"
-                    android:layout_width="195dp"
+                    android:layout_width="190dp"
                     android:layout_height="155dp"
                     android:background="@drawable/mainmenu_button_2_1"
                     />
 
                 <Button
+                    android:layout_marginRight="20dp"
                     android:id="@+id/gong_button"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="77dp"
                     android:background="#00ff0000"
                     android:fontFamily="@font/font2"
                     android:text="공지사항"
                     android:textColor="@color/black"
-                    android:textSize="40dp"
+                    android:textSize="37dp"
                     android:visibility="invisible" />
 
                 <Button
+                    android:layout_marginRight="20dp"
                     android:id="@+id/gun_button"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="78dp"
                     android:layout_below="@id/gong_button"
                     android:background="#00ff0000"
                     android:fontFamily="@font/font2"
                     android:text="건의사항"
                     android:textColor="@color/black"
-                    android:textSize="40dp"
+                    android:textSize="37dp"
                     android:visibility="invisible" />
             </RelativeLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_below="@id/tmp_1">
-
+            android:layout_height="160dp"
+            android:layout_below="@id/tmp_1"
+            >
             <androidx.appcompat.widget.AppCompatButton
+                android:layout_weight="1"
                 android:id="@+id/Chat_button1"
-                android:layout_width="165dp"
+                android:layout_width="150dp"
                 android:layout_height="155dp"
-                android:layout_marginLeft="22dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="25dp"
                 android:background="@drawable/mainmenu_button_4"
                 android:fontFamily="@font/font2"
                 android:gravity="center_horizontal"
                 android:text="몽룡춘향"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="37dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:layout_weight="1"
                 android:id="@+id/setting_button"
-                android:layout_width="165dp"
+                android:layout_width="150dp"
                 android:layout_height="155dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@id/Chat_button1"
                 android:background="@drawable/mainmenu_button_3"
                 android:fontFamily="@font/font2"
                 android:gravity="center_horizontal"
                 android:text="   설정   "
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="37dp" />
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
@@ -180,7 +195,7 @@
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginLeft="135dp"
+            android:layout_centerInParent="true"
             android:background="@drawable/oneonenine"
             android:textSize="25dp" />
 
